0.0.10
- Added using and dropping of items
- Added experimental support for OpenGL rendering
- Fixed crash in fullscreen with hardware acceleration enabled (win32)
- Reimplemented A* pathfinding, hopefully stable now

0.0.9  (30 Jan 2005)
- Replaced Allegro library with SDL, SDL_image and SDL_mixer
- A huge amount of small GUI improvements
- Lots of internal changes including a resource manager

0.0.8a  (27 Dec 2004)
- Added controlling player with arrow keys
- Rewrote gui with Guichan
- Added scripts for easy autotools

0.0.8  (30 Oct 2004)
- Added sound support for macosx
- Added primitive inventory
- Added action failed messages for all skills and known reasons
  (0x0110 handled)
- Added sit capability with the right level
- Added "dead" message and restart packet
- Added skill dialog
- Added skill update (0x0141 handled)
- Added colored text for damage
- Added monster death animation
- Added icon to win32 executable
- Added 'enter' key support in login screen
- Added RLE sprites for tiles
- Added collision detection with beings
- Fix for mapserver segfault-bug in chatsystem (broken pipe for all users on 
  screen)
- Partially added TMW GUI to inventory
- Added soundpool that can preload, play and remove items to/from ram
- Added tmw_bar_proc
- Added tmw_plus_proc && possibility to increase stats point, at each new level
- Added increase skill level dialog
- Added 2xSaI engine
- Added patch client v0.1 to Win32 version


0.0.7e  (31 Aug 2004)
- Tons of bugfixes & improvements (again)
- MacOS X support
- Confirmed support for GNU/Linux on ppc
- Added soundsystem (plays a MOD as BGM)
- Added a 2nd Map
- Added NPCs with simple dialogs
- Added warps
- Changed makefile for GCC to optimize more

0.0.7d  (18 Aug 2004)
- Tons of bugfixes
- Added a bit of prediction to player walking
- Added Ultramichy's server to client
- Added a walking monster
- Added a* system (still not applied to player, but only to monster walking)
- Started rewriting of chat system
