@@ -8,5 +8,5 @@ sound=0
 stretch=0
 system=
 url=http://localhost/
-username=Kyokai
+username=
 version=0.200000
